# level2-cv-semanticsegmentation-cv-09

./: .gitignore  README.md  dataset.py  infer.py  inference.py  model.py  models.py  pyproject.toml  train.py  utils.py
.github/: refactor.md
.github/ISSUE_TEMPLATE/: discussion.md  question.md
configs/: infer.yaml  train.yaml
models/: swin.py  upernet.py
