[tool.poetry]
name = "level2-cv-semanticsegmentation-cv-09"
version = "0.1.0"
description = ""
authors = ["ohkingtaek <mm0741@naver.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = "2.0.0"
lightning = "^2.2.0.post0"
segmentation-models-pytorch = "^0.3.3"
albumentations = "^1.4.0"
omegaconf = "^2.3.0"
pandas = "^2.2.0"
wandb = "^0.16.3"
torchvision = "0.15.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
